istio/envoy_filter/add-listener-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-listener-filter
spec:
  configPatches:
  - applyTo: LISTENER
    patch:
      operation: ADD
      value:
        name: kmesh-listener
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 15019
        filter_chains:
        - filters:
          - name: "envoy.filters.network.tcp_proxy"
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              stat_prefix: main_interval
              cluster: main_internal
        listener_filters:
        - name: "envoy.filters.listener.proxy_protocol"
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
