istio/envoy_filter/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: pod-metadata
  namespace: istio-system
spec:
        #workloadSelector:
        #labels:
        #envoy: envoy-sample
  configPatches:
    - applyTo: LISTENER
      match:
        #context: SIDECAR_OUTBOUND
        listener:
          name: virtualOutbound
          #name: 0.0.0.0_80
          #name: 0.0.0.0_9080
      patch:
        operation: MERGE
        value:
          "listener_filters": [ 
          {
            "name": "envoy.filters.listener.pod_metadata",
            #"typed_config": {
            # "@type": "type.googleapis.com/envoy.extensions.filters.listener.pod_metadata.v3.PodMetadata"
            #}
          }
          ]
